@@ -40,6 +40,7 @@
 
    - Accelerators: define new keys in Dossier menu (todo #1204).
    - BalanceRender: improve appearance of header notes (todo #1191).
+   - OpeTemplate: make the treeview sortable (todo #1200).
 
  Bug fixes:
 
